# shirube

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
api/: .gitattributes  README.md  pyproject.toml
api/src/shirube/: __init__.py  __main__.py  config.py  logging_config.py
api/src/shirube/adapters/: README.md  __init__.py
api/src/shirube/adapters/ai/: __init__.py  anthropic_provider.py  factory.py  openai_provider.py
api/src/shirube/adapters/api/: __init__.py  app.py  dependencies.py  errors.py
api/src/shirube/adapters/api/routes/: ai.py  chat.py  connections.py  data.py  health.py  profiles.py  schema.py
api/src/shirube/adapters/keyring/: __init__.py  secret_store.py
api/src/shirube/adapters/persistence/: __init__.py  ai_config_repository.py  bootstrap.py  database.py  models.py  profile_repository.py
api/src/shirube/adapters/postgres/: __init__.py  _common.py  connector.py  data_reader.py  schema_inspector.py
api/src/shirube/application/: README.md  __init__.py  ai_config.py  connections.py  context_budget.py  data.py  lookup.py  navigator.py  profiles.py  schema.py
api/src/shirube/domain/: README.md  __init__.py  ai.py  chat.py  connection.py  data.py  errors.py  lookup.py  schema.py
api/src/shirube/ports/: README.md  __init__.py  repositories.py
api/tests/: conftest.py  test_ai_adapters.py  test_ai_config.py  test_bootstrap.py  test_chat.py  test_config.py  test_connections.py  test_context_budget.py  test_data.py  test_health.py  test_logging.py  test_lookup.py  test_main.py  test_navigator.py  test_postgres_connector.py  test_profiles.py  test_schema.py  test_secret_store.py  test_security.py
api/tests/integration/: conftest.py  test_ollama_navigator.py  test_read_only.py  test_schema_inspector.py  test_sql_injection.py
dev/: compose.yaml
docs/: decisions.md  testing.md  vision.md
scripts/: build.sh  dev-db.sh
web/: .gitignore  .npmrc  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/e2e/: config.ts  connect.spec.ts  connections.spec.ts  data-preview.spec.ts  errors.spec.ts  global-setup.ts  helpers.ts  navigate.spec.ts  navigator.spec.ts  panes.spec.ts  search.spec.ts  session.spec.ts  stub-provider.mjs  zz-verify-artifact.spec.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/components/: data-drawer.test.tsx  data-drawer.tsx  explorer.test.tsx  explorer.tsx  header-wave.tsx  kind-badge.tsx  logo.tsx  navigator-pane.test.tsx  navigator-pane.tsx  schema-search.test.tsx  schema-search.tsx  settings-dialog.test.tsx  settings-dialog.tsx  table-detail.test.tsx  table-detail.tsx
web/src/components/connection/: connection-form.test.tsx  connection-form.tsx  connection-screen-actions.test.tsx  connection-screen.test.tsx  connection-screen.tsx  hero-backdrop.tsx  marble.tsx  profiles-list.tsx  waves.tsx
web/src/components/er/: er-diagram.tsx  layout.test.ts  layout.ts  neighbourhood.test.ts  neighbourhood.ts  routed-edge.tsx  table-node.tsx
web/src/i18n/: index.ts
web/src/lib/: ai-presets.test.ts  ai-presets.ts  api.test.ts  api.ts  chat-history.test.ts  chat-history.ts  destinations.test.ts  destinations.ts  panes.ts  schema-refs.test.ts  schema-refs.ts  settings.test.tsx  settings.tsx  storage.ts  use-media-query.ts  utils.test.ts  utils.ts
web/src/test/: factories.ts  setup.ts
(+6 files in other folders)
