[project]
name = "shirube"
version = "0.2.0b4"
description = "Understand your database as a map — built for the AI-coding era."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "platformdirs>=4.2",
    "keyring>=25.7.0",
    "psycopg[binary]>=3.3.4",
    "structlog>=25.1.0",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.scripts]
shirube = "shirube.__main__:main"

[project.urls]
Homepage = "https://github.com/shou-taro/shirube"
Repository = "https://github.com/shou-taro/shirube"
Changelog = "https://github.com/shou-taro/shirube/blob/main/CHANGELOG.md"
Issues = "https://github.com/shou-taro/shirube/issues"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "httpx>=0.27",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "hypothesis>=6.100",
    "keyrings-alt>=5.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shirube"]
# Include the built SPA (generated, git-ignored) in the wheel for single-origin serving.
artifacts = ["src/shirube/static/**/*"]

[tool.hatch.build.targets.sdist]
# Keep the sdist to the sources needed to build the wheel; exclude test caches,
# the lockfile and other dev cruft that hatchling would otherwise sweep in.
include = [
    "src/shirube",
    "README.md",
    "pyproject.toml",
]
artifacts = ["src/shirube/static/**/*"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs a real PostgreSQL; set SHIRUBE_TEST_DATABASE_URL to run (skipped otherwise)",
]
